--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
-    "node-uuid": "^1.4.8",
+    "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.1.2",
     "rxjs": "^6.5.3",
     "todomvc-app-css": "^2.2.0",
     "todomvc-common": "^1.0.5",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,8 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/node-uuid": "^0.0.28",
     "@types/react-router-dom": "^4.3.5",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint-config-prettier": "^6.3.0",
