--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
     "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -15,7 +11,6 @@
     "rxjs": "^6.5.3",
     "todomvc-app-css": "^2.2.0",
     "todomvc-common": "^1.0.5",
-    "typescript": "3.6.3",
     "uuid": "^3.3.3"
   },
   "scripts": {
@@ -38,13 +33,22 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
     "@types/node-uuid": "^0.0.28",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
+    "body-parser": "^1.19.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-react-hooks": "^2.0.1"
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.1.0",
+    "typescript": "3.6.3"
   }
 }
