--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-react-hooks": "^2.0.1",
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "morgan": "^1.9.1",
     "sqlite3": "^4.1.0",
     "typescript": "3.6.3"
